src/test/ui/parser/pat-lt-bracket-6.stderr
error: expected one of `)`, `,`, or `@`, found `[`
  --> $DIR/pat-lt-bracket-6.rs:2:19
   |
LL |     let Test(&desc[..]) = x;
   |                   ^ expected one of `)`, `,`, or `@` here

error[E0425]: cannot find value `x` in this scope
  --> $DIR/pat-lt-bracket-6.rs:2:27
   |
LL |     let Test(&desc[..]) = x;
   |                           ^ not found in this scope

error[E0531]: cannot find tuple struct/variant `Test` in this scope
  --> $DIR/pat-lt-bracket-6.rs:2:9
   |
LL |     let Test(&desc[..]) = x;
   |         ^^^^ not found in this scope

error[E0658]: subslice patterns are unstable
  --> $DIR/pat-lt-bracket-6.rs:2:20
   |
LL |     let Test(&desc[..]) = x;
   |                    ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0658.
For more information about an error, try `rustc --explain E0425`.
